<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:background="@color/fondoAPK"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.quique.cice_imc2.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/labelIntroduccion"
            android:layout_weight="0.1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/Introduccion" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="292dp"
            app:srcCompat="@drawable/estomago"
            android:id="@+id/imageView"
            android:layout_weight="0.87" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="46dp">
            <TextView
                android:text="@string/Altura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/labelAltura"
                android:layout_weight="1"
                android:layout_gravity="top|center_vertical"
                android:gravity="center_vertical" />
            <EditText
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:layout_weight="1"
                android:id="@+id/cajaAltura"
                android:layout_gravity="top|center_vertical"
                android:hint="cm" />
            <TextView
                android:text="@string/Peso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/labelPeso"
                android:layout_weight="1"
                android:layout_gravity="top|center_vertical"
                android:gravity="center_vertical" />

            <EditText
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:layout_weight="1"
                android:id="@+id/cajaPeso"
                android:layout_gravity="top|center_vertical"
                android:hint="kg" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/Calcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btnCalcular" />
            <Button
                android:text="@string/Salir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btnSalir" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
